--- a/app/src/main/res/layout/payment_main.xml
+++ b/app/src/main/res/layout/payment_main.xml
@@ -6,7 +6,7 @@
     android:gravity="top"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".Payment">
+    tools:context=".Screens.Payment">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="35dp"
